TFIDF SearchEngine Database Integrated

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
-/Files/Datasets/Initial/*.csv
-/Files/Datasets/Initial/*.gz
-/Files/Datasets/Processed/*.json
-/Files/Datasets/Processed/*.gz
-/Files/SearchEngine_TFIDF/Memory/*.pkl
+/Datasets/Initial/*.csv
+/Datasets/Initial/*.gz
+/Datasets/Processed/RE/*.json
+/Datasets/Processed/RE/*.gz
+/Datasets/Processed/SE/*.json
+/Datasets/Processed/SE/*.gz
+/SearchEngine/TFIDF/Memory/*.pkl
