--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,10 @@
 /MemoryMatrix/*.pkl
 /Integrated_Database/
-/Research_Study/ModuleStudy/BM25_SemanticSearch/*.joblib
-/Research_Study/ModuleStudy/BM25_SemanticSearch/*.h5
 /Research_Study/ModuleStudy/General/*.json
 /Research_Study/ModuleStudy/General/*.gz
 /Research_Study/ModuleStudy/General/*.csv
+/Research_Study/ModuleStudy/BM25_SemanticSearch_PartialData/*.joblib
+/Research_Study/ModuleStudy/BM25_SemanticSearch_PartialData/*.h5
+/Research_Study/ModuleStudy/BM25_SemanticSearch_CompleteData/*.joblib
+/Research_Study/ModuleStudy/BM25_SemanticSearch_CompleteData/*.h5
+/Research_Study/ModuleStudy/BM25_SemanticSearch_CompleteData/*.json
