CustomModule added in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 /MemoryMatrix/*.pkl
 /Integrated_Database/
+/CustomModule/
 /Research_Study/ModuleStudy/General/*.json
 /Research_Study/ModuleStudy/General/*.gz
 /Research_Study/ModuleStudy/General/*.csv
