--- a/Application/Frontend/react-search-bar/package.json
+++ b/Application/Frontend/react-search-bar/package.json
@@ -15,7 +15,11 @@
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.1"
+    "react-router-dom": "^6.21.1",
+    "semantic-ui-css": "^2.5.0",
+    "semantic-ui-react": "^2.1.5",
+    "faker": "^4.1.0",
+    "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
